--- a/gs-serving-web-content-main/complete/src/main/resources/static/index.html
+++ b/gs-serving-web-content-main/complete/src/main/resources/static/index.html
@@ -300,8 +300,8 @@
         <div class="user-profile">
             <img src="https://i.pravatar.cc/150?u=duong" alt="Avatar" class="avatar">
             <div class="user-info-text">
-                <span class="user-role">Receptionist</span>
-                <span class="user-name">Dương TÚ</span>
+                <span class="user-role">Kẻ mời gọi khách</span>
+                <span class="user-name">Dương Bú Vú Khách</span>
             </div>
         </div>
     </nav>
